--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "AuthenticationConnection": "Server=tcp:verklegt2.database.windows.net,1433;Initial Catalog=VLN2_2018_H23;Persist Security Info=False;User ID=VLN2_2018_H23_usr;Password=dampFerre+21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
